# RINS-sigma

./: README.md
Task1/: face_localizer_dnn  goToGoal.cpp  hw3.py  hw3_v2.py  hw4_node.py  hw4_node_v2.py  map_ok.pgm  map_ok.yaml  move.py
Task2/exercise6/: CMakeLists.txt
Task2/exercise6/scripts/: detect_rings  (+1 more)
Task2/parkiranje/: move_arm.py  parking.py  parking_2.py  parking_4_improved.py  parking_5_idk.py
Task3/generate_goals/: calculate_goals.py  read_pgm.py
dn3/: CMakeLists.txt  package.xml
dn3/scripts/: hw3.py
dn3/src/: 5_goals.cpp
exercise6/scripts/: detect_rings  detect_rings_moj  detect_rings_not_final
exercise6/src/: cylinder_segmentation.cpp
exercise6/worlds/: rins_task2.world
facedetection/: face_detection.py  face_recognition.py
models/: Basic_model.pt  Rand_squeez_1.1_try18_100_0.936.pt  Rand_squeez_1.1_try18_22_0.946.pt  Rand_squeez_1.1_try18_81_0.95.pt  Rand_squeez_1.1_try4_52_0.956.pt  longer_16_0.957.pt  longer_8_0.953.pt  squeez_1.0_try2_28_0.942.pt  squeez_1.0_try2_34_0.95.pt  squeez_1.1_try2_20_0.954.pt
task1_real/: amcl_simulation.launch  hw4_node.py  move.py  real_map.pgm  real_map.yaml  real_map1.pgm  real_map1.yaml  real_map_edited.pgm  real_map_edited.yaml
task1_real2/: 3dsensor.launch  CMakeLists.txt
task1_real2/scripts/: hw3.py  hw3_v2.py  hw4_node.py  move.py
task3_all/task1/: CMakeLists.txt  package.xml
task3_all/task1/msg/: Message.msg
task3_all/task1/scripts/: face_detection.py  food_detection.py  foodero_model_1.pt  hw4_node.py  move_real.py  task2_move.py  task3_move.py  task3_move_new.py  test.py
(+8 files in other folders)
